--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
     "react-load-script": "^0.0.6",
+    "react-modal": "^3.16.1",
     "react-places-autocomplete": "^7.3.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1",
